# read-package-json

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
src/: lib.rs  parsers.rs
tests/: person.rs  serde.rs
